Correcting a translation and modifying layout of the labels (more readable)

--- a/css/app.sass
+++ b/css/app.sass
@@ -29,8 +29,13 @@ body
 .row
 	margin: 10px 10px
 	label
+		color: black
+
+.row
+	.server-label
 		color: $accent-color
 		font-size: inherit
+		margin-right: 10px
 
 .collapsible
 	.row
